# boat_pro

./: .gitignore  CMakeLists.txt  COMMUNICATION_VERIFICATION_REPORT.md  DOCS_NAVIGATION.md  MQTT_TOPICS_DEFINITION.md  README.md  SCRIPT_CLEANUP_SUMMARY.md  main.cpp  mqtt_verify.cpp  network_test.cpp
config/: communication_config.json  mosquitto_custom.conf  mqtt_config.json  system_config.json
docs/: API_REFERENCE.md  CLIENT_INTEGRATION_CHECKLIST.md  COMMUNICATION.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_REORGANIZATION_REPORT.md  INDEX.md  MANUAL_VERIFICATION_GUIDE.md  MQTT_ARCHITECTURE.md  MQTT_CLIENT_CONFIG.md  MQTT_CLIENT_UPDATE_SUMMARY.md  MQTT_DATA_RECEPTION_GUIDE.md  MQTT_DATA_RECEPTION_TEST_REPORT.md  MQTT_INTEGRATION.md  MQTT_INTEGRATION_SUMMARY.md  MQTT_INTERFACE.md  MQTT_USAGE.md  MQTT_VERIFICATION_REPORT.md  QUICK_VERIFICATION_CHECKLIST.md  README.md  SCRIPTS_README.md  SCRIPTS_USAGE.md  SYSTEM_OVERVIEW.md  VERIFICATION_COMMANDS.md  无人船作业安全预测系统 - 完整工作流程.md
examples/: mqtt_example.cpp
include/: boat_safety_system.h  collision_detector.h  communication_protocol.h  data_format_converter.h  fleet_manager.h  geometry_utils.h  mqtt_communicator.h  mqtt_interface.h  mqtt_message_handler.h  mqtt_topics.h  types.h  udp_communicator.h
scripts/: acceptance_demo.sh  build.sh  config_manager.sh  manual_verify_step_by_step.sh  mqtt_demo.sh  mqtt_full_test.sh  mqtt_quick_check.sh  run_tests.sh  send_external_data.sh  test_mpc_client.sh  test_mqtt_client.sh  test_mqtt_reception.sh
simulation/: CMakeLists.txt  boat_simulator.cpp
src/: collision_detector.cpp  communication_protocol.cpp  data_format_converter.cpp  fleet_manager.cpp  geometry_utils.cpp  main.cpp  mqtt_communicator.cpp  mqtt_interface.cpp  mqtt_message_handler.cpp  mqtt_message_handler.cpp.bak  types.cpp  udp_communicator.cpp
tests/: test_collision_detector.cpp  test_communication.cpp  test_mqtt.cpp
